# weave-compose

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  demo.tape  pyproject.toml  weave.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: adapters.md  architecture.md  contributing.md  limitations.md  protocol.md  roadmap.md
examples/: weave.yaml.example
examples/basic-composition/: README.md  weave.yaml
examples/basic-composition/skills/: backend_api.md  design_system.md
examples/cross-platform/: README.md  weave.yaml
examples/cross-platform/claude-skills/: SKILL.md
examples/cross-platform/cursor-rules/: .cursorrules
tests/: test_adapters.py  test_adapters_codex.py  test_adapters_windsurf.py  test_cli.py  test_composer.py  test_config.py  test_detector.py  test_e2e.py  test_persistent_registry.py  test_registry.py  test_schema.py  test_selector.py  test_server.py
tests/fixtures/claude_code/: backend_api.md  naksha_design.md  naksha_design.skill.json
tests/fixtures/codex/: AGENTS.md  weave.skill.json
tests/fixtures/codex/.codex/: devops.md
tests/fixtures/cursor/: frontend.cursorrules  weave.skill.json
tests/fixtures/cursor/.cursor/rules/: typescript.mdc
tests/fixtures/windsurf/: api_design.windsurfrules  python_standards.skill.json  python_standards.windsurfrules
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  api.ts
ui/src/components/: LoadPanel.tsx  SkillBrowser.tsx  SkillCard.tsx  VisualComposer.tsx
weave/: __init__.py  mcp_server.py
weave/cli/: __init__.py  config.py  config_schema.py  main.py  query_command.py  run_command.py  serve_command.py
weave/core/: __init__.py  composer.py  detector.py  embedder.py  persistent_registry.py  registry.py  schema.py  selector.py
weave/core/adapters/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  gemini_cli.py  manifest.py  windsurf.py
weave/server/: __init__.py  app.py
