[project]
name = "weave-compose"
version = "0.3.0"
description = "Platform-aware skill composition layer for AI coding tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "skills", "composition", "claude", "cursor", "codex", "windsurf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer",
    "sentence-transformers",
    "numpy",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/Adityaraj0421/weave-compose"
Repository = "https://github.com/Adityaraj0421/weave-compose"
Changelog = "https://github.com/Adityaraj0421/weave-compose/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Adityaraj0421/weave-compose/issues"

[project.scripts]
weave = "weave.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
    "httpx",
]
persist = [
    "chromadb",
]
server = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["weave*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "sentence_transformers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
